--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <div class="title">
- <h1>Welcome To TradeBruh</h1>
+ <h1>Welcome To TradeBruh Test</h1>
  <a href="./waztrade.css">WazirX Layout</a>
 </div>
 
